--- a/package.json
+++ b/package.json
@@ -3,12 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-three/drei": "^9.78.1",
+    "@react-three/fiber": "^8.13.4",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "framer-motion": "^10.12.18",
     "react": "^18.2.0",
+    "react-accessible-accordion": "^5.0.0",
+    "react-countup": "^6.4.2",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.10.1",
+    "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.29.0",
+    "react-tsparticles": "^2.10.1",
+    "slick-carousel": "^1.8.1",
+    "swiper": "^10.0.4",
+    "three": "^0.154.0",
+    "tsparticles": "^2.10.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
