--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
     "react-tsparticles": "^2.10.1",
+    "react-vertical-timeline-component": "^3.6.0",
     "slick-carousel": "^1.8.1",
     "swiper": "^10.0.4",
     "three": "^0.154.0",
