fix:some changes

--- a/package.json
+++ b/package.json
@@ -9,16 +9,20 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "framer-motion": "^10.12.18",
+    "gsap": "^3.12.3",
     "react": "^18.2.0",
     "react-accessible-accordion": "^5.0.0",
     "react-countup": "^6.4.2",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
+    "react-parallax-tilt": "^1.7.177",
     "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
+    "react-spinners": "^0.13.8",
     "react-tsparticles": "^2.10.1",
     "react-vertical-timeline-component": "^3.6.0",
+    "rsuite": "^5.53.2",
     "slick-carousel": "^1.8.1",
     "swiper": "^10.0.4",
     "three": "^0.154.0",
