--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "gsap": "^3.12.3",
     "react": "^18.2.0",
     "react-accessible-accordion": "^5.0.0",
+    "react-countdown": "^2.3.6",
     "react-countup": "^6.4.2",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
